feat: add nav sx and page nav

--- a/index.html
+++ b/index.html
@@ -25,11 +25,17 @@
     <main>
         <div class="containter">
             <div class="row">
+                <!-- Vertical-Nav-Sx -->
                 <div class="col-2">
-                    lateral-sx
+                    <nav class="nav flex-column">
+                        <a class="nav-link active" aria-current="page" href="#">Active</a>
+                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#">Link</a>
+                    </nav>
                 </div>
+                <!-- End-Vertical-Nav-Sx -->
 
-                <div class="col-8">
+                <div class="col-10">
                     <!-- List-Mail -->
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">email@gmail.com</li>
@@ -37,9 +43,26 @@
                         <li class="list-group-item">email@gmail.com</li>
                     </ul>
                     <!-- End-List-Mail -->
-                </div>
-                <div class="col-2">
-                    lateral-rx
+
+                    <!-- Nav-Page-Mail -->
+                    <nav>
+                        <ul class="pagination justify-content-center">
+                            <li class="page-item">
+                                <a class="page-link" href="#" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                </a>
+                            </li>
+                            <li class="page-item"><a class="page-link" href="#">1</a></li>
+                            <li class="page-item"><a class="page-link" href="#">2</a></li>
+                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                            <li class="page-item">
+                                <a class="page-link" href="#" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <!-- End-Nav-Page-Mail -->
                 </div>
             </div>
         </div>
