--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
     <!-- Bootstrap-CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
+
     <title>MailRandom</title>
 </head>
 <header>
-    <nav class="navbar bg-body-tertiary">
+    <nav class="navbar bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="./img/favicon.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-                FakeMail
+                Smail
             </a>
         </div>
     </nav>
@@ -28,9 +33,13 @@
                 <!-- Vertical-Nav-Sx -->
                 <div class="col-2">
                     <nav class="nav flex-column">
-                        <a class="nav-link active" aria-current="page" href="#">Active</a>
-                        <a class="nav-link" href="#">Link</a>
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link active" aria-current="page" href="#"><i class="fa-solid fa-inbox"></i>In
+                            entrata</a>
+                        <a class="nav-link" href="#"><i class="fa-solid fa-file"></i>Bozze</a>
+                        <a class="nav-link" href="#"><i class="fa-solid fa-rectangle-xmark"></i>Spam</a>
+                        <a class="nav-link" href="#"><i class="fa-solid fa-trash"></i>Cestino</a>
+                        <a class="nav-link active" aria-current="page" href="#"><i
+                                class="fa-solid fa-box-archive"></i>Archivio</a>
                     </nav>
                 </div>
                 <!-- End-Vertical-Nav-Sx -->
