--- a/index.html
+++ b/index.html
@@ -32,15 +32,38 @@
             <div class="row">
                 <!-- Vertical-Nav-Sx -->
                 <div class="col-2">
-                    <nav class="nav flex-column">
-                        <a class="nav-link active" aria-current="page" href="#"><i class="fa-solid fa-inbox"></i>In
+                    <!-- <nav class="nav flex-column">
+                        <a class="nav-link dropdown-toggle active" aria-current="page" href="#"><i
+                                class="fa-solid fa-inbox"></i>In
                             entrata</a>
-                        <a class="nav-link" href="#"><i class="fa-solid fa-file"></i>Bozze</a>
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"><i
+                                class="fa-solid fa-file"></i>Bozze</a>
                         <a class="nav-link" href="#"><i class="fa-solid fa-rectangle-xmark"></i>Spam</a>
                         <a class="nav-link" href="#"><i class="fa-solid fa-trash"></i>Cestino</a>
                         <a class="nav-link active" aria-current="page" href="#"><i
                                 class="fa-solid fa-box-archive"></i>Archivio</a>
-                    </nav>
+                    </nav> -->
+
+                    <ul class="nav flex-column p-2">
+                        <li class="nav-item nav-pills">
+                            <a class="nav-link active bg-warning text-dark" aria-current="page" href="#"><i
+                                    class="fa-solid fa-inbox"></i>In
+                                entrata</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="#"><i class="fa-solid fa-file"></i>Bozze</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="#"><i class="fa-solid fa-rectangle-xmark"></i>Spam</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="#"><i class="fa-solid fa-trash"></i>Cestino</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" aria-current="page" href="#"><i
+                                    class="fa-solid fa-box-archive"></i>Archivio</a>
+                        </li>
+                    </ul>
                 </div>
                 <!-- End-Vertical-Nav-Sx -->
 
@@ -61,11 +84,11 @@
                                     <span aria-hidden="true">&laquo;</span>
                                 </a>
                             </li>
-                            <li class="page-item"><a class="page-link" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                            <li class="page-item"><a class="page-link text-dark" href="#">1</a></li>
+                            <li class="page-item"><a class="page-link text-dark" href="#">2</a></li>
+                            <li class="page-item"><a class="page-link text-dark" href="#">3</a></li>
                             <li class="page-item">
-                                <a class="page-link" href="#" aria-label="Next">
+                                <a class="page-link text-dark" href="#" aria-label="Next">
                                     <span aria-hidden="true">&raquo;</span>
                                 </a>
                             </li>
