--- a/index.html
+++ b/index.html
@@ -32,17 +32,6 @@
             <div class="row">
                 <!-- Vertical-Nav-Sx -->
                 <div class="col-2">
-                    <!-- <nav class="nav flex-column">
-                        <a class="nav-link dropdown-toggle active" aria-current="page" href="#"><i
-                                class="fa-solid fa-inbox"></i>In
-                            entrata</a>
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"><i
-                                class="fa-solid fa-file"></i>Bozze</a>
-                        <a class="nav-link" href="#"><i class="fa-solid fa-rectangle-xmark"></i>Spam</a>
-                        <a class="nav-link" href="#"><i class="fa-solid fa-trash"></i>Cestino</a>
-                        <a class="nav-link active" aria-current="page" href="#"><i
-                                class="fa-solid fa-box-archive"></i>Archivio</a>
-                    </nav> -->
 
                     <ul class="nav flex-column p-2">
                         <li class="nav-item nav-pills">
@@ -69,10 +58,8 @@
 
                 <div class="col-10">
                     <!-- List-Mail -->
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">email@gmail.com</li>
-                        <li class="list-group-item">email@gmail.com</li>
-                        <li class="list-group-item">email@gmail.com</li>
+                    <ul class="list-group list-group-flush mail">
+                        <!-- <li class="list-group-item">email@gmail.com</li> -->
                     </ul>
                     <!-- End-List-Mail -->
 
@@ -80,7 +67,7 @@
                     <nav>
                         <ul class="pagination justify-content-center">
                             <li class="page-item">
-                                <a class="page-link" href="#" aria-label="Previous">
+                                <a class="page-link text-dark" href="#" aria-label="Previous">
                                     <span aria-hidden="true">&laquo;</span>
                                 </a>
                             </li>
